--- a/.github/workflows/anti-virus-scan.yml
+++ b/.github/workflows/anti-virus-scan.yml
@@ -38,7 +38,6 @@ jobs:
       - uses: actions/checkout@v4
       - run: Install-Module -Name powershell-yaml -Force -Scope CurrentUser -Repository PSGallery
       - uses: Cyberboss/install-winget@f2bbd477c74da39732b479bf6c6c855a7f9f011c
-      - run: winget install wingetcreate --disable-interactivity --accept-source-agreements --accept-package-agreements
       - run: winget settings --enable LocalManifestFiles
       - name: Get parent directory
         id: parent-dir
@@ -55,6 +54,7 @@ jobs:
       - name: Windows Defender Scan
         run: |
           Write-OutPut 'Scanning ${{ matrix.file }}'
+          Remove-MpPreference -ExclusionPath (Get-MpPreference).ExclusionPath
           Write-Output '- Getting installer urls...'
           $installerUrls = Get-Content '${{ matrix.file }}' | ConvertFrom-Yaml | Select-Object -ExpandProperty Installers | Select-Object -ExpandProperty InstallerUrl -Unique
           Write-Output " - Found $($installerUrls.Count) installer urls"
