--- a/.github/workflows/anti-virus-scan.yml
+++ b/.github/workflows/anti-virus-scan.yml
@@ -26,13 +26,12 @@ jobs:
           json: true
           escape_json: false
       - name: List all changed files
-        run: echo '${{ steps.changed-files.outputs.all_changed_files }}'
-      - name: More than 1 file changed
         run: |
+          echo '${{ steps.changed-files.outputs.all_changed_files }}'
           if [ $(echo '${{ steps.changed-files.outputs.all_changed_files }}' | jq '. | length') -gt 1 ]; then
             echo "More than 1 installer manifest changed, exiting"
             exit 1
-          fi
+          fi          
   scan:
     name: Scan
     runs-on: windows-latest
