--- a/.github/workflows/anti-virus-scan.yml
+++ b/.github/workflows/anti-virus-scan.yml
@@ -1,6 +1,6 @@
 name: Scan manifests
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - master
     paths:
@@ -25,6 +25,7 @@ jobs:
             manifests/**/*.installer.yaml
           json: true
           escape_json: false
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: List all changed files
         run: |
           echo '${{ steps.changed-files.outputs.all_changed_files }}'
@@ -111,4 +112,3 @@ jobs:
         env:
           PR: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
