--- a/.github/workflows/anti-virus-scan.yml
+++ b/.github/workflows/anti-virus-scan.yml
@@ -112,7 +112,7 @@ jobs:
           PR: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - if: ${{ success() }}
-        run: gh pr edit $env:PR --add-label scan/passed
+        run: gh pr edit $env:PR --remove-label scan/failed; gh pr edit $env:PR --add-label scan/passed
         env:
           PR: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
