--- a/.github/workflows/anti-virus-scan.yml
+++ b/.github/workflows/anti-virus-scan.yml
@@ -87,7 +87,7 @@ jobs:
             $hash = Get-FileHash -Path $fileName -Algorithm SHA256 | Select-Object -ExpandProperty Hash
             Write-Output " - Detected sha-256 hash: $hash"
             Write-Output " - Installer hash in manifest: $($_.InstallerSha256)"
-            if (-not $_.InstallerSha256 -ieq $hash) {
+            if ($_.InstallerSha256 -ine $hash) {
               Write-Output ' - Adding installer-hash-mismatch label to PR'
               gh pr edit $env:PR --add-label installer-hash-mismatch
               Write-Error 'InstallerSha256 does not match with actual installer hash'
