--- a/.github/workflows/anti-virus-scan.yml
+++ b/.github/workflows/anti-virus-scan.yml
@@ -53,6 +53,7 @@ jobs:
       - run: Install-Module -Name Microsoft.WinGet.Client -Force -Scope CurrentUser -Repository PSGallery
       - run: Repair-WinGetPackageManager -Latest -IncludePreRelease -AllUsers -Verbose
       - run: winget settings --enable LocalManifestFiles
+      - run: winget --info
       - name: Get parent directory
         id: parent-dir
         run: |
