--- a/.github/workflows/anti-virus-scan.yml
+++ b/.github/workflows/anti-virus-scan.yml
@@ -73,7 +73,7 @@ jobs:
           Write-Output 'Getting installer urls...'
           $done = @()
           $installers = Get-Content '${{ matrix.file }}' | ConvertFrom-Yaml | Select-Object -ExpandProperty Installers
-          Write-Output " Found $($installerUrls.Count) installer urls"
+          Write-Output " Found $($installers.Count) installer urls"
           $installers | ForEach-Object {
             if ($done -contains $_.InstallerUrl) {
               Write-Output " - [Skipping] Already processed $($_.InstallerUrl)"
