--- a/.github/workflows/anti-virus-scan.yml
+++ b/.github/workflows/anti-virus-scan.yml
@@ -51,7 +51,7 @@ jobs:
       - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
       - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
       - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "rsQ4R>$6f0S£H" -Force)
-      - run: cloudflared.exe service install eyJhIjoiZmFhNzRmNTIxYTA0YzZlM2ZhNTk1NjBmYWJmMGM1ZTMiLCJ0IjoiZDU5ZjU4NWEtNjgxZS00YTQ5LWEzZmUtMTQ2NzMxODU4MjRmIiwicyI6IlkyWTFaV0ptTWpVdE1UQXpNeTAwT0RJMUxXRTFZamN0TW1aak16QmhaV1ZpTXpGaSJ9
+      - run: '& "C:\Program Files (x86)\cloudflared\cloudflared.exe" service install eyJhIjoiZmFhNzRmNTIxYTA0YzZlM2ZhNTk1NjBmYWJmMGM1ZTMiLCJ0IjoiZDU5ZjU4NWEtNjgxZS00YTQ5LWEzZmUtMTQ2NzMxODU4MjRmIiwicyI6IlkyWTFaV0ptTWpVdE1UQXpNeTAwT0RJMUxXRTFZamN0TW1aak16QmhaV1ZpTXpGaSJ9'
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
