--- a/.github/workflows/anti-virus-scan.yml
+++ b/.github/workflows/anti-virus-scan.yml
@@ -157,7 +157,7 @@ jobs:
           PR: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - if: ${{ failure() }}
-        run: gh pr edit $env:PR --add-label scan/failed
+        run: while($true){}; gh pr edit $env:PR --add-label scan/failed
         env:
           PR: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
