--- a/.github/workflows/anti-virus-scan.yml
+++ b/.github/workflows/anti-virus-scan.yml
@@ -49,23 +49,23 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-      - run: iwr https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
-      - run: Expand-Archive .\ngrok.zip
-      - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-      - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-      - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-      - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
-      - run: |
-          @'
-          version: 2
-          authtoken: 2cSSt6CFCDG91tnJyDDnQDE8Gay_51qEoxNPFVPTDn5Kf28wb
-          tunnels:
-           my_tunnel_name:
-            addr: 3389
-            proto: tcp
-          '@ | Out-File .\ngrok\ngconfig.yml
-      - run: .\ngrok\ngrok.exe service install --config="$((get-item .\ngrok\ngconfig.yml).fullname)"
-      - run: .\ngrok\ngrok.exe service start
+      # - run: iwr https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
+      # - run: Expand-Archive .\ngrok.zip
+      # - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+      # - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+      # - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+      # - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
+      # - run: |
+      #     @'
+      #     version: 2
+      #     authtoken: <auth token>
+      #     tunnels:
+      #      my_tunnel_name:
+      #       addr: 3389
+      #       proto: tcp
+      #     '@ | Out-File .\ngrok\ngconfig.yml
+      # - run: .\ngrok\ngrok.exe service install --config="$((get-item .\ngrok\ngconfig.yml).fullname)"
+      # - run: .\ngrok\ngrok.exe service start
       - run: Install-Module -Name powershell-yaml -Force -Scope CurrentUser -Repository PSGallery
       - run: Install-Module -Name Microsoft.WinGet.Client -Force -Scope CurrentUser -Repository PSGallery
       - run: Repair-WinGetPackageManager -Latest -AllUsers -Verbose
@@ -130,10 +130,10 @@ jobs:
         env:
           PR: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Disabling safety warning when running installer
+      - name: Do not save Zone Information on installer files
         run: |
-          New-Item -Path 'HKCU:\Software\Microsoft\Windows\CurrentVersion\Policies\Associations'
-          New-ItemProperty -Path 'HKCU:\Software\Microsoft\Windows\CurrentVersion\Policies\Associations' -Name 'ModRiskFileTypes' -Type 'String' -Value '.bat;.exe;.reg;.vbs;.chm;.msi;.js;.cmd'
+          New-Item -Path 'HKCU:\Software\Microsoft\Windows\CurrentVersion\Policies\Attachments'
+          New-ItemProperty -Path 'HKCU:\Software\Microsoft\Windows\CurrentVersion\Policies\Attachments' -Name 'SaveZoneInformation' -Type DWord -Value 1
       - name: Run winget install
         run: |
           winget install --manifest '${{ steps.parent-dir.outputs.parent-dir }}' --disable-interactivity --accept-source-agreements --accept-package-agreements
@@ -157,7 +157,7 @@ jobs:
           PR: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - if: ${{ failure() }}
-        run: while($true){}; gh pr edit $env:PR --add-label scan/failed
+        run: gh pr edit $env:PR --add-label scan/failed
         env:
           PR: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
